2008-01-22  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCmdIl.c (Tcl_LreverseObjCmd): 
	* tests/cmdIL.test (cmdIL-7.7): fix crash on reversing an empty
	list [Bug 1876793].

2008-01-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/README: minor typo fixes [Bug 1853072]

	* generic/tclIO.c (TclGetsObjBinary): operate on topmost channel.
	[Bug 1869405] (Ficicchia)

2008-01-17  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Revision to preserve parsed intreps
	of numeric and boolean literals when compiling expressions with
	(optimize == 1).

2008-01-15  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclCompExpr.c: add an 'optimize' argument to 
	* generic/tclCompile.c:  TclCompileExpr() to profit from better
	* generic/tclCompile.h:  literal management according to usage.
	* generic/tclExecute.c:

	
	* generic/tclCompExpr.c: Fix literal leak in exprs [Bug 1869989] 
	* generic/tclExecute.c:  (dgp)
	* tests/compExpr.test:
	
	* doc/proc.n: changed wording for access to non-local variables;
	added mention to [namespace upvar]. Lame attempt at dealing with
	documentation [Bug 1872708]
	
2008-01-15  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    Replacing 'operator' by 'op' in the def
	* generic/tclCompExpr.c: of struct TclOpCmdClientData to
	* generic/tclCompile.h:  accomodate C++ compilers [Bug 1855644]
	
2008-01-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinSerial.c (SerialCloseProc, TclWinOpenSerialChannel):
	use critical section for read & write side. [Bug 1353846] (newman)

2008-01-11  Miguel Sofer  <msofer@users.sf.net>

	* unix/tclUnixThrd.c (TclpThreadGetStackSize): restore stack
	checking functionality in freebsd [Bug 1850424]

	* unix/tclUnixThrd.c (TclpThreadGetStackSize): fix for crash in
	freebsd [Bug 1860425].

2008-01-10  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclStringObj.c (Tcl_AppendFormatToObj):  Correct failure to
	* tests/format.test:	account for big.used == 0 corner case in the